Finalize OpenSLT 0.2.2
